--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "composer/installers": "^2.1",
         "cweagans/composer-patches": "^1.7",
         "drupal/address": "^1.12",
+        "drupal/beautify": "^1.0",
         "drupal/calendar_view": "2.1.x-dev",
         "drupal/coffee": "^1.3",
         "drupal/config_ignore": "^2.3",
@@ -31,7 +32,6 @@
         "drupal/core-recommended": "^10",
         "drupal/field_create": "^1.0",
         "drupal/migrate_plus": "^6.0",
-        "drupal/paragraphs": "^1.15",
         "drupal/queue_ui": "^3.1",
         "drupal/shield": "^1.7",
         "drupal/smart_date": "^3.7",
