--- a/composer.json
+++ b/composer.json
@@ -27,23 +27,25 @@
         "drupal/coffee": "^1.3",
         "drupal/config_ignore": "^2.3",
         "drupal/config_split": "^1.7",
-        "drupal/core-composer-scaffold": "^10",
-        "drupal/core-project-message": "^10",
-        "drupal/core-recommended": "^10",
+        "drupal/core-composer-scaffold": "^10.0",
+        "drupal/core-project-message": "^10.0",
+        "drupal/core-recommended": "^10.2",
         "drupal/field_create": "^1.0",
+        "drupal/gin": "^3.0@RC",
+        "drupal/gin_toolbar": "^1.0@RC",
         "drupal/migrate_plus": "^6.0",
         "drupal/queue_ui": "^3.1",
         "drupal/shield": "^1.7",
         "drupal/smart_date": "^3.7",
         "drupal/upgrade_status": "^4.0",
         "drupal/views_taxonomy_radios_filter": "^1.0",
-        "drush/drush": "^11.4.0",
         "vlucas/phpdotenv": "^5.1",
         "webflo/drupal-finder": "^1.2"
     },
     "require-dev": {
         "drupal/core-dev": "^10",
-        "drupal/devel": "^5.1"
+        "drupal/devel": "^5.1",
+        "drush/drush": "^12.5"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -59,7 +61,8 @@
             "drupal/core-composer-scaffold": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "drupal/core-project-message": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "autoload": {
